stylesheet.less
/* ... */
.widget.responsiveslideshow .slideshow-widget .btn-prev, 
.widget.responsiveslideshow .slideshow-widget .btn-next {
    font-size: 0;
    z-index: 11;
    text-indent: -99999px;
}

.widget.responsiveslideshow .slideshow-widget .btn-prev {
  background: image('/images/greytriangle-left.png') no-repeat center left;
}

.widget.responsiveslideshow .slideshow-widget .btn-next {
  background: image('/images/greytriangle-right.png') no-repeat center right;   
}

.widget.responsiveslideshow .slideshow-widget-controls {
  margin: 10px 0;
}

.widget.responsiveslideshow .slideshow-widget .btn-play
{
    background: image('/images/slideshow-play.png') center no-repeat;
    background-size: contain;
    border-radius:10px;
    font-size:0;
    text-indent: -99999px;
}

.widget.responsiveslideshow .slideshow-widget:hover .btn-play.pause
{
    background: image('/images/slideshow-pause.png') center no-repeat;
    background-size: contain;  
}

.widget.responsiveslideshow .slideshow-widget-controls .dot
{
  width: 8px;
  height: 8px;
  line-height: 14px;
  display: inline-block;
  background-color: @color-swatch2;
  cursor: pointer;
}

.widget.responsiveslideshow .slideshow-widget-controls .dot.selected
{
   background-color: @color-swatch4;
}

.widget.responsiveslideshow .dot {
  border: none;
  -webkit-border-radius: 50px;
  -moz-border-radius: 50px;
  border-radius: 50px;
}

/* ===============================
   IPAD WIDTH
   =============================== */

@media only screen and (max-width: 768px) { 
    header {
        margin: 30px 0 30px;
        padding-bottom: 23px;
    }

    .widget.companyheader {
        width: 100%;
        display: block;
        margin: 0 auto;
    }

    /* NAV */


    .widget.extendednavigation {
        display: block;
        width: 50px;
        height: 50px;
        margin-top: 0;
    }

     /* NAV ICON */

  .widget .extendednavigation a.pull {
    display: block;
    width: 100%;
    position: absolute;
    top: 19px;
  }

    .widget .extendednavigation a.pull:after {
    content:"";
    background: image('/images/nav-icon.png') no-repeat;
    width: 30px;
    height: 30px;
    display: inline-block;
    position: absolute;
    right: 0;
    top: 0;
  }

  /* NAV */

  
 .widget .extendednavigation ul {
    width: 100%;
    display: none;
    margin: 0;
    border-top: 1px solid darken(@color-swatch2,10%);
  }

  .widget.extendednavigation ul li {
    border-bottom: 1px solid darken(@color-swatch2,10%);
    padding: 16px 0;
  }

   .widget.extendednavigation ul li:last-child {
    border-bottom: none;
  }

  .widget.extendednavigation ul li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li.folder {
    padding: 16px 0;
  }

  .widget .extendednavigation li {
    width: 100%;
    padding: 0;
  }

  .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
      padding: 5px 0;
      margin: 0;
      text-align: left;
  }

  .widget.extendednavigation ul li > ul {
      display: none!important;
  }

  .widget.extendednavigation ul li:hover > ul {
      display: block!important;
      width: 100%;
      margin: 16px 0;
      padding: 0;
  }

  .widget.extendednavigation ul li:hover > ul > li {
    border-bottom: none;
  }

  .widget.extendednavigation ul li:hover > ul > li .text {
    color: @font-swatch6-color;
  }

  .widget.extendednavigation ul li:hover > ul > li:hover .text {
    color: @font-swatch6-color-hover;
  }

  .widget.extendednavigation ul li.folder {
    border-radius: 0;
  }

  .widget.extendednavigation ul li:hover > ul li:first-child {
    padding-top: 16px;
    border-top: none;
  }

    .widget.extendednavigation ul li:hover > ul li:last-child {
    padding-top: 16px;
  }

  .widget.extendednavigation li:hover > ul > li > a {
    padding-left: 10px;
  }


    /* FEATURE */

   .feature {
    width: 90%;
    margin: 0 5%;
   }

     /* GALLERY */

    .widget.gallery li span.inner .title, .widget.gallery li span.inner .description {
    font-size:bkscale(@font-swatch5-font-size,0.9);
    line-height:bkscale(@font-swatch5-line-height,0.9);
    }

    /* SLIDESHOW */

    .widget.responsiveslideshow .slideshow-image-list, 
    .widget.responsiveslideshow .slideshow-widget {
        height:400px;
    }

}
/* ... */

